    - Report plugin packages for plugins that are installed with the
      package manager
    - Add some addon manager related prefs to the whitelist
    - Display additional metadata in the extensions report
    - Take "default-to-compatible" in to account when determining whether
      the user is running incompatible addons
    - Attach submitted crash ID's to bug reports

 -- Chris Coulson <chris.coulson@canonical.com>  Thu, 12 Apr 2012 21:56:15 +0100

firefox-trunk (13.0~a1~hg20120313r88815-0ubuntu1) precise; urgency=low

  * New upstream snapshot v13.0 A1 HG20120313R88815

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * Update globalmenu-extension to 2.5 prerelease r278

  * Refresh build-depends:
    - Bump minimum GTK version to 2.14 as we build with GIO support
    - Add minimum requirement for glib (2.18)
    - Drop libidl-dev, this doesn't appear to be needed now
    - Bump minimum NSPR version to 4.9.0 for --enable-system-nspr builds
    - Bump minimum sqlite version to 3.7.10 for --enable-system-sqlite
      builds
    - Bump minimum NSS version to 3.13.2 for --enable-system-nss builds
  * Refresh patches:
    - update debian/patches/ubuntu-ua-string-changes.patch
    - update debian/patches/change-moz-app-name.patch
    - update debian/patches/ubuntu-codes-google.patch
    - update debian/patches/revert-bmo621446-investigation.patch
    - update debian/patches/use-new-yasm-in-lucid.patch
    - update debian/patches/firefox-kde.patch
    - update debian/patches/mozilla-kde.patch
  * Clean up the file exclude list and add comments for excluded files
    - update debian/build/create-tarball.py
  * Make it easy to run Firefox in valgrind for builds that are compiled
    with explicit valgrind support
    - update debian/firefox.sh.in
  * Fix LP: #915895 - Just set autoDisableScopes to 0. Other distributions
    are already doing this, and we already made this feature pretty much